--- a/Final Project/instaclone/app/assets/stylesheets/instaclone_styles.scss
+++ b/Final Project/instaclone/app/assets/stylesheets/instaclone_styles.scss
@@ -65,3 +65,10 @@ input[type="text"], input[type="password"], textarea {
   font-size: 14px;
   color: $secondary-color;
 }
+.post-preview {
+  .card-img-top {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+}
