--- a/Final Project/instaclone/app/views/users/show.html.erb
+++ b/Final Project/instaclone/app/views/users/show.html.erb
@@ -1,11 +1,20 @@
 <h1>Users#show</h1>
 <h1>Добро пожаловать, <%= @user.username %>!</h1>
 
+<% unless current_user == @user %>
+  <% if current_user.following?(@user) %>
+    <%= button_to 'Отписаться', unfollow_user_path(@user), method: :delete %>
+  <% else %>
+    <%= button_to 'Подписаться', follow_user_path(@user) %>
+  <% end %>
+<% end %>
+
+
 <p><%= @user.bio %></p>
 
 <% if @posts.any? %>
   <% @posts.each do |post| %>
-    <%= image_tag post.image.url if post.image? %>
+    <%= image_tag(url_for(post.image)) if post.image.attached? %>
     <p><%= post.description %></p>
   <% end %>
 <% else %>
@@ -19,3 +28,4 @@
   <%= link_to 'Редактировать профиль', edit_user_path(@user) %>
 <% end %>
 
+<%= link_to "Сделать новый пост", new_post_path %>
