Added some security before deploy

--- a/Final Project/instaclone/app/views/posts/index.html.erb
+++ b/Final Project/instaclone/app/views/posts/index.html.erb
@@ -1,18 +1,24 @@
 <h1>Posts#index</h1>
 
-<div class="container mt-5">
-  <div class="row">
-    <% @posts.each do |post| %>
-      <div class="col-md-4 mb-4">
-        <div class="post-preview">
-          <%= link_to (image_tag(url_for(post.image), class: 'img-fluid') if post.image.attached?), post_path(post) %>
-          <div class="post-info">
-            <strong><%= post.user.username %></strong>
-            <p><%= truncate(post.description, length: 50) %></p>
+<div class="container mt-5 d-flex flex-column align-items-center">
+  <div class="custom-row d-flex flex-wrap justify-content-center">
+    <% if @posts.any? %>
+      <% @posts.each do |post| %>
+        <div class="custom-post mb-4">
+          <div class="post-preview">
+            <%= link_to (image_tag(url_for(post.image), class: 'img-fluid') if post.image.attached?), post_path(post) %>
+            <div class="post-info">
+              <strong><%= post.user.username %></strong>
+              <p><%= truncate(post.description, length: 50) %></p>
+            </div>
           </div>
         </div>
-      </div>
+      <% end %>
+    <% else %>
+      <h3>Подпишитесь на пользователей, чтобы видеть их посты.</h3>
     <% end %>
   </div>
 </div>
+
+
 
