--- a/Final Project/instaclone/app/assets/stylesheets/instaclone_styles.scss
+++ b/Final Project/instaclone/app/assets/stylesheets/instaclone_styles.scss
@@ -72,3 +72,36 @@ input[type="text"], input[type="password"], textarea {
     object-fit: cover;
   }
 }
+.post-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 16px;
+  margin-bottom: 16px;
+  transition: background-color 0.3s;
+
+
+  &:hover {
+    background-color: #f5f5f5;
+  }
+}
+.custom-row {
+  width: 100%;
+  max-width: 1200px; /* или любая другая максимальная ширина, которую вы предпочитаете */
+  overflow-y: auto;
+}
+
+.custom-post {
+  margin: 0 15px; /* горизонтальные отступы между постами */
+  width: calc(33.33% - 30px); /* вычитаем двойной отступ */
+}
+
+/* на мобильных устройствах вы можете установить ширину 100% для постов, чтобы они занимали всю ширину экрана */
+@media (max-width: 767px) {
+  .custom-post {
+    width: 100%;
+    margin: 0 0 15px 0; /* только вертикальные отступы */
+  }
+}
